--- a/ShopGo/HomeScreenTopPart/HomeScreenTopPartStoryboard.storyboard
+++ b/ShopGo/HomeScreenTopPart/HomeScreenTopPartStoryboard.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,11 +13,11 @@
             <objects>
                 <viewController storyboardIdentifier="HomeViewController" id="Y6W-OH-hqX" customClass="HomeViewController" customModule="ShopGo" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q1A-Zc-3ff">
-                                <rect key="frame" x="19" y="107" width="93" height="47"/>
+                                <rect key="frame" x="12" y="80" width="93" height="47"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="93" id="ecP-hK-LDJ"/>
                                     <constraint firstAttribute="height" constant="47" id="kT0-wE-bTB"/>
@@ -33,7 +33,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pqb-Mu-SKB">
-                                <rect key="frame" x="224" y="107" width="83" height="47"/>
+                                <rect key="frame" x="217" y="80" width="83" height="47"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="83" id="dpJ-kW-dwl"/>
                                     <constraint firstAttribute="height" constant="47" id="i5A-3o-nj2"/>
@@ -49,7 +49,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hSX-y8-51w">
-                                <rect key="frame" x="120" y="108" width="96" height="46"/>
+                                <rect key="frame" x="113" y="81" width="96" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="96" id="O47-CE-wti"/>
                                     <constraint firstAttribute="height" constant="46" id="OcG-dZ-HEw"/>
@@ -61,25 +61,25 @@
                                     <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="menButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Lp1-IZ-SBY"/>
+                                    <action selector="burgerMenuButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Lp1-IZ-SBY"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="men" translatesAutoresizingMaskIntoConstraints="NO" id="hdt-Bw-bYr">
-                                <rect key="frame" x="125" y="108" width="35" height="45"/>
+                                <rect key="frame" x="118" y="81" width="35" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="35" id="Met-Th-0G3"/>
                                     <constraint firstAttribute="height" constant="45" id="huv-UL-2qM"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rocket" translatesAutoresizingMaskIntoConstraints="NO" id="l0A-pQ-F0t">
-                                <rect key="frame" x="22" y="107" width="34" height="45"/>
+                                <rect key="frame" x="15" y="80" width="34" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="9EF-FQ-7vA"/>
                                     <constraint firstAttribute="width" constant="34" id="hwE-yU-Tmm"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PlY-qQ-sPB">
-                                <rect key="frame" x="315" y="108" width="94" height="46"/>
+                                <rect key="frame" x="308" y="81" width="94" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="3BD-BL-ja0"/>
                                     <constraint firstAttribute="width" constant="94" id="LQD-vU-Rkq"/>
@@ -95,14 +95,14 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="childrenImage" translatesAutoresizingMaskIntoConstraints="NO" id="XSW-gU-jn2">
-                                <rect key="frame" x="319" y="112" width="31" height="37"/>
+                                <rect key="frame" x="312" y="85" width="31" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="31" id="BJj-bU-pub"/>
                                     <constraint firstAttribute="height" constant="37" id="svZ-OX-ct0"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="women" translatesAutoresizingMaskIntoConstraints="NO" id="W0d-fU-syA">
-                                <rect key="frame" x="228" y="110" width="28" height="39"/>
+                                <rect key="frame" x="221" y="83" width="28" height="39"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="28" id="19l-HC-YJY"/>
                                     <constraint firstAttribute="height" constant="39" id="ZPS-6L-Mat"/>
@@ -155,7 +155,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gSp-AN-3Zk" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="HMV-TX-WyM">
-                        <rect key="frame" x="0.0" y="47" width="428" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
